# WNDMNGR.DB

./: .gitignore  CHANGELOG.md  README.md  _1_fetch.py  _2_format.py  fix_sql_semicolons.py  pyproject.toml  repartition_silver.ipynb  schema.txt  tasks.py  test_connection.ipynb  test_sql_connection.ipynb  trigger_ingestion.py
.github/workflows/: create-tables.yml  full-deploy.yml  load-database.yml  semantic-release.yml  setup-database.yml  test-edge-function.yml  test-storage-upload.yml  test-supabase-cli.yml  test-supabase-connection.yml
DATABASES/france_172074/: MIGRATION_STATUS.md
SCRIPTS/ETL/: _01_raw_to_bronze.py  _02_bronze_to_silver.py  _03_silver_to_gold.py  _04_gold_to_blob.py  _04_gold_to_db.py  _04_sql_to_db.py  _05_create_tables_github.py  _05_csv_to_db.py  _05_wipe_database.py  _06_csv_to_db.py  _06_load_data_github.py
SCRIPTS/SETUP/: drop_tables.py  init_database.py
SCRIPTS/TESTS/: validate_grid_wtg_to_db.py  validate_lookup_tables.py  validate_silver_to_gold.py
SCRIPTS/TRIGGERS/: README.md  build_workflow.py  load_workflow.py
TABLES/01_REFERENCES/: company_roles.sql  farm_types.sql  person_roles.sql
TABLES/02_ENTITIES/: companies.sql  employees.sql  farms.sql  ice_detection_systems.sql  persons.sql  substations.sql  wind_turbine_generators.sql
TABLES/03_RELATIONSHIPS/: farm_company_roles.sql  farm_referents.sql
TABLES/04_LOOK_UPS/: farm_actual_performances.sql  farm_administrations.sql  farm_electrical_delegations.sql  farm_environmental_installations.sql  farm_financial_guarantees.sql  farm_ice_detection_systems.sql  farm_locations.sql  (+7 more)
(+71 files in other folders)
