[project]
name = "wndmngr-db"
version = "1.6.0"
dependencies = [
    "pyodbc>=5.2.0",
    "pandas>=2.3.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "pyjanitor>=0.31.0",
    "openpyxl>=3.1.5",
    "ipykernel>=6.30.1",
    "sqlmodel>=0.0.25",
    "invoke>=2.2.0",
    "docling>=2.57.0",
    "pdfplumber>=0.11.7",
    "petl>=1.7.17",
    "supabase>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "icecream>=2.1.8",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
build_command = "python -c \"print('No build required')\""
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "docs",
    "style",
    "refactor",
    "perf",
    "test",
    "build",
    "ci",
    "chore",
    "revert",
]
minor_tags = [
    "feat",
]
patch_tags = [
    "fix",
    "perf",
]
